<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guessText"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/turnTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tryNumber"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/leftTurnsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guessesLeft"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/hintView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="80dp"
            android:hint="@string/playerGuess"
            android:inputType="number" />

    </LinearLayout>
    <Button
        android:id="@+id/guessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape_startgame_btn"
        android:shadowColor="#A8A8A8"
        android:onClick="onGuessButtonClick"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Guess!"
        android:textColor="#FFE8ED"
        android:textSize="24sp" />
    <ListView
        android:id="@+id/guessListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>