<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/startGameBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/round_power_settings_new_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:background="@drawable/buttonshape_startgame_btn"
            android:onClick="onButtonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/startGameBtn"
            android:textColor="#FFE8ED" />

        <Button
            android:id="@+id/settingsBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/round_settings_black_24dp"
            android:background="@drawable/buttonshape_settings_btn"
            android:onClick="onButtonClick"
            android:shadowColor="#A8A8A8"
            android:text="@string/settingsBtn"
            android:textColor="#FFE8ED" />


        <Button
            android:id="@+id/aboutBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/round_info_black_24dp"
            android:background="@drawable/buttonshape_about_btn"
            android:onClick="onButtonClick"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/aboutBtn"
            android:textColor="#FFE8ED" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change the brightness"

            android:drawableStart="@drawable/round_brightness_low_black_24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="50dp"/>
        <Switch
            android:id="@+id/switch_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</LinearLayout>
